--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@angular/platform-browser-dynamic": "^14.2.9",
     "@angular/router": "^14.2.9",
     "@capacitor/app": "4.1.0",
-    "@capacitor/core": "4.4.0",
+    "@capacitor/core": "^4.4.0",
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "4.0.1",
+    "@capacitor/preferences": "^4.0.1",
     "@capacitor/status-bar": "4.0.1",
-    "@capacitor/storage": "^1.2.5",
     "@ionic/angular": "^6.3.4",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
+    "ionic": "^5.4.16",
     "ionicons": "^6.0.3",
     "rxjs": "~7.5.7",
     "tslib": "^2.4.1",
@@ -40,7 +43,7 @@
     "@angular-eslint/eslint-plugin": "~14.1.2",
     "@angular-eslint/eslint-plugin-template": "~14.1.2",
     "@angular-eslint/template-parser": "~14.1.2",
-    "@angular/cli": "^14.2.8",
+    "@angular/cli": "^14.2.9",
     "@angular/compiler": "^14.2.9",
     "@angular/compiler-cli": "^14.2.9",
     "@angular/language-service": "^14.2.9",
